# entropic-v2challenger

./: .gitattributes  .gitignore  .test-baseline.txt  CLAUDE.md  CONTRIBUTING.md  Makefile  PLAYBOOK.md  REVIEW.md  migrate_tokens.py
backend/: .gitignore  pyproject.toml  setup.sh
backend/.hypothesis/constants/: 006fe8a15fe3a9f0  0132a141cb6c1230  01daeeada9fb013c  0266a325a133befc  028cb188c5db8689  0922e282aca033ea  09cc982dad3677eb  0a40028bbff92f7c  0d51a6af4e0cc96d  0f468e26d34667ff  0f4e1b37b9bf4735  0fa463418fa16cc3  116fa3e7cb9e5ca6  13bbc56afa4d07f4  1425b58aa29431fe  15427f04550cbe19  15bab7ea76c3e2b8  1819552a4c09047e  19160d963b33e51c  1b36907ca4e23ce4  1ce7acc4891ee596  1d01cf3e7337158d  1fefcf5482b2ed17  2065c2b0b178c62d  206c058e301876d2  21258c09ec666885  217b2453376b4a1a  22ef8dedf5f7753a  2387abc4158593ee  23ef60f63cf42d27  2461a90cdd831e6b  2766ab6906d586ea  (+146 more)
backend/scripts/: check_tests.sh  extract_effect_metadata.py  gen_field_top25.py  generate_oracles.py  lint_gpu_patterns.py  smoke_extrude_spin.py  spike_motion_mask.py  test_health.py
backend/src/: cli.py  diagnostics.py  main.py  security.py  zmq_server.py
backend/tests/: conftest.py  test_all_effects.py  test_alpha_composite.py  test_alpha_roundtrip.py  test_bake_perf_track.py  test_breadcrumbs.py  test_bugfixes_f2_m1_m2.py  test_composite_per_track_chains.py  test_composite_render_terminal.py  test_composite_state_propagation.py  test_copy_machine.py  test_copy_machine_smoke.py  test_demo_trilogy.py  test_diagnostics.py  test_dsp_phaser_zero_division.py  test_edge_cases.py  test_edge_cases_memory.py  test_edge_cases_video.py  test_effect_harness.py  test_effects_fuzz.py  test_export_frame.py  test_export_parity.py  test_export_transform_parity.py  test_field_codegen.py  test_field_eval.py  test_field_params.py  test_field_source.py  test_frame_bank.py  test_frame_bank_preview_sg8.py  test_granulator_export.py  test_graph_sync.py  test_grid_moire_real.py  test_inj3_composite_caps.py  test_instrument_voice_composite_regression.py  test_integration.py  test_integration_color.py  test_ipc_contracts.py  test_ipc_schema.py  test_mask_cohesion_parity.py  test_mask_routing.py  (+53 more)
(+1709 files in other folders)
