[project]
name = "entropic-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=26.0",
    "numpy>=2.0",
    "av>=14.0",
    "Pillow>=11.0",
    "opencv-python-headless>=4.10",
    "scipy",
    "sentry-sdk",
    "sounddevice>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not perf'"
markers = [
    "perf: performance gate tests (deselected by default, run with: pytest -m perf)",
    "smoke: fast unit tests with no I/O, no ZMQ, no filesystem (run with: pytest -m smoke)",
]
